k8s/gatekeeper/constraint-no-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRoot
metadata:
  name: no-root-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    # Excluimos namespaces de sistema
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - argocd
